Fix spacing in rest details container

--- a/app/assets/stylesheets/rest_show.scss
+++ b/app/assets/stylesheets/rest_show.scss
@@ -57,6 +57,11 @@ button:focus {
     height: 3rem;
     display: flex;
     flex-direction: row;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 3;
+    opacity: 1;
 }
 
 .tab-selected {
@@ -77,13 +82,18 @@ button:focus {
 
 .reserve-form-container {
     max-width: 25rem;
-    max-height: 20rem;
-    position: relative;
-    margin: 1rem 0 1rem 0;
+    height: 23rem;
+    position: sticky;
     padding-top: 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    top: 0;
+    z-index: 3;
+    background-color: white;
+    padding-bottom: 1rem;
+    padding: 1rem;
+    box-shadow: 0 5px 9px 2px rgba(0, 0, 0, 0.2);
 }
 
 .reserve-form-container > * {
@@ -112,8 +122,8 @@ button:focus {
 }
 
 .reserve-form-head {
-    padding: 0 0 0.5rem;
-    font-weight: 500;
+    padding: 0 0 0.1rem;
+    font-weight: bold;
     text-align: center;
     font-size: 20px;
     opacity: 0.8;
@@ -145,7 +155,7 @@ button:focus {
     font-size: 16px;
     font-weight: bold;
     padding: 0;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
 }
 
 .reserve-form-submit:hover {
